--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>file</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>vai çe um emagem ake</h1>
+    <h1>vai ser uma imagem aqui</h1>
+    <ul>
+        <li>estudante</li>
+        <li>escola</li>
+    </ul>
 </body>
 </html>
