--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
         <li>estudante</li>
         <li>escola</li>
     </ul>
+    <header>
+    <img src="alurastart logo.png" alt="logo do alurastart"
+    </header>
 </body>
 </html>
