--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>file</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<header class="cabeçalho">
+<img class="cabeçalho-imagem" src="./alurastart logo.png" alt="longo da alura start">
 <body>
-    <h1>vai ser uma imagem aqui</h1>
-    <ul>
+    
+<ul class="cabeçalho-lista-item">
         <li>estudante</li>
         <li>escola</li>
     </ul>
-    <header>
-    <img src="alurastart logo.png" alt="logo do alurastart"
     </header>
 </body>
 </html>
