--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
 </head>
 <header class="cabeçalho">
 <img class="cabeçalho-imagem" src="./alurastart logo.png" alt="longo da alura start">
-<body>
-    
+<body>  
 <ul class="cabeçalho-lista-item">
-        <li>estudante</li>
-        <li>escola</li>
+        <li class="cabeçalho-lista-item">estudante</li>
+        <li class="cabeçalho-lista-item">escola</li>
     </ul>
     </header>
-</body>
-</html>
+    <section class="escola">
+        <h2 class="escola-titulo">Sobre a escola:</h2>
+        <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar pensamento computacional através da programação</p>
+        <p class="escola-texto-dois">A turma mais famosa é a segunda série A. uma turma diversa e engajada, as vezes, um pouco bagunceira, mas entrega excelentes resultados!</p>
+        <img src="./college project-pana.png" alt="estudante">
+     </section>
+  </body>
+ </html>
