--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>file</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnnect" href="https://fonts.goggleapis.com">
-    <link rel="preconnnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=poppins:700&display=swap" rel="stylesheet">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>sua mãe o vo pega</title>
+        <link rel="stylesheet" href="style.css" >
+        <link rel="preconnnect" href="https://fonts.googleapis.com">
+        <link rel="preconnnect" href="https://fonts.gstatic.com" crossorigin="">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:2ght@700&family=poppins:700&display=swap" rel="stylesheet">
+    </head>
 <header class="cabeçalho">
-<img class="cabeçalho-imagem" src="./alurastart logo.png" alt="longo da alura start">
-<body>  
-    <ul class="cabeçalho-lista-item">
-        <li class="cabeçalho-lista-item">estudante</li>
-        <li class="cabeçalho-lista-item">escola</li>
-    </ul>
+    <img class="cabeçalho-imagem" src="./alurastart logo.png" alt="logon da alura start">
+    <body>
+        <ul class="cabeçalho-lista-item"> 
+            <li class="cabeçalho-lista-item">estudante</li>
+            <li class="cabeçalho-lista-item">escola</li>
+        </ul>
 </header>
-    <section class="escola">
-        <div class="escola-conteudo">
-        <h2 class="escola-titulo">Sobre a escola:</h2>
-        <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar pensamento computacional através da programação</p>
-        <p class="escola-texto-dois">A turma mais famosa é a segunda série A. uma turma diversa e engajada, as vezes, um pouco bagunceira, mas entrega excelentes resultados!</p>
-    </div>
-        <img class="escola-imagem" src="./High School-bro.png" alt="estudante">
-     </section>
-     <section class="estudante">
-        <h2 class="estudante-titulo"> quem são nossos estudantes!</h2>
-        <img src="./shrek.png" alt="foto do estudante">
-     </section>
-  </body>
- </html>
+        <section class="escola">
+            <div class="escola-conteudo">
+                <h2 class="escola-titulo">Sobre a escola:</h2>
+                <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar pensamento computacional atrávez da programação</p>
+                <p class="escola-texto-dois">A turma mais famosa é a segunda série A. uma turma diversa e engajada, as vezes, um pouco bagunçeira, mas entrega excelentes resultados!</p>
+            </div> 
+                <img class="escola-imagem" src="./college project-pana.png" alt="istudainte">
+        </section>
+        <section class="estudante">
+            <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+            <img src="./Shrek-Meme-PNG-Isolated-Image.png" alt="foto do estudante">
+            <h3>mike shrek</h3>
+            <img class="estudante-icone" src="./instagram.png" alt="instagram">
+            <img class="estudante-icone" src="./github.png" alt="github">
+            <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
+        </section>
+    </body>
+</html>
