--- a/index.html
+++ b/index.html
@@ -23,15 +23,32 @@
                 <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar pensamento computacional atrávez da programação</p>
                 <p class="escola-texto-dois">A turma mais famosa é a segunda série A. uma turma diversa e engajada, as vezes, um pouco bagunçeira, mas entrega excelentes resultados!</p>
             </div> 
-                <img class="escola-imagem" src="./college project-pana.png" alt="istudainte">
+                <img class="escola-imagem" src="./High School-bro.png" alt="istudainte">
         </section>
         <section class="estudante">
             <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-            <img src="./Shrek-Meme-PNG-Isolated-Image.png" alt="foto do estudante">
-            <h3>mike shrek</h3>
-            <img class="estudante-icone" src="./instagram.png" alt="instagram">
-            <img class="estudante-icone" src="./github.png" alt="github">
-            <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
+            <div class="estudante-todos">
+            <div class="estudante-div">
+              <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
+              <h3>shrek bigodudo</h3>
+              <img class="estudante-icone" src="./instagram.png" alt="instagram">
+              <img class="estudante-icone" src="./github.png" alt="github">
+              <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
+                <h3>shrek bigoduda</h3>
+                <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                <img class="estudante-icone" src="./github.png" alt="github">
+                <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
+              </div>
+              <div class="estudante-div">
+                <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
+                <h3>shrek bigodude</h3>
+                <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                <img class="estudante-icone" src="./github.png" alt="github">
+                <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
+              </div>
         </section>
     </body>
 </html>
