--- a/index.html
+++ b/index.html
@@ -28,27 +28,74 @@
         <section class="estudante">
             <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
             <div class="estudante-todos">
+            <span></span>
             <div class="estudante-div">
               <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
-              <h3>shrek bigodudo</h3>
+              <h3 class="estudante-nome">shrek bigodudo</h3>
               <img class="estudante-icone" src="./instagram.png" alt="instagram">
               <img class="estudante-icone" src="./github.png" alt="github">
               <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
             </div>
-            <div class="estudante-div">
-                <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
-                <h3>shrek bigoduda</h3>
-                <img class="estudante-icone" src="./instagram.png" alt="instagram">
-                <img class="estudante-icone" src="./github.png" alt="github">
-                <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
-              </div>
-              <div class="estudante-div">
-                <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
-                <h3>shrek bigodude</h3>
-                <img class="estudante-icone" src="./instagram.png" alt="instagram">
-                <img class="estudante-icone" src="./github.png" alt="github">
-                <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
-              </div>
+                <div class="estudante-div">
+                  <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
+                  <h3 class="estudante-nome">shrek bigodudo</h3>
+                  <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                  <img class="estudante-icone" src="./github.png" alt="github">
+                  <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
+                </div>
+                    <div class="estudante-div">
+                      <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
+                      <h3 class="estudante-nome">shrek bigodudo</h3>
+                      <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                      <img class="estudante-icone" src="./github.png" alt="github">
+                      <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
+                    </div>
+                    <span></span>
+                        <div class="estudante-div">
+                          <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
+                          <h3 class="estudante-nome">shrek bigodudo</h3>
+                          <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                          <img class="estudante-icone" src="./github.png" alt="github">
+                          <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
+                        </div>
+                            <div class="estudante-div">
+                              <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
+                              <h3 class="estudante-nome">shrek bigodudo</h3>
+                              <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                              <img class="estudante-icone" src="./github.png" alt="github">
+                              <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
+                            </div>
+                                <div class="estudante-div">
+                                  <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
+                                  <h3 class="estudante-nome">shrek bigodudo</h3>
+                                  <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                                  <img class="estudante-icone" src="./github.png" alt="github">
+                                  <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
+                                </div>
+                                <span></span>
+                               
+                                    <div class="estudante-div">
+                                      <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
+                                      <h3 class="estudante-nome">shrek bigodudo</h3>
+                                      <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                                      <img class="estudante-icone" src="./github.png" alt="github">
+                                      <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
+                                    </div>
+                                        <div class="estudante-div">
+                                          <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
+                                          <h3 class="estudante-nome">shrek bigodudo</h3>
+                                          <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                                          <img class="estudante-icone" src="./github.png" alt="github">
+                                          <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
+                                        </div>
+                                            <div class="estudante-div">
+                                              <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
+                                              <h3 class="estudante-nome">shrek bigodudo</h3>
+                                              <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                                              <img class="estudante-icone" src="./github.png" alt="github">
+                                              <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
+                                            </div>
+                                        </div>
         </section>
     </body>
 </html>
