--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
             <div class="estudante-div">
               <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
               <h3 class="estudante-nome">shrek bigodudo</h3>
-              <img class="estudante-icone" src="./instagram.png" alt="instagram">
+              <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
               <img class="estudante-icone" src="./github.png" alt="github">
               <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
             </div>
                 <div class="estudante-div">
-                  <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
-                  <h3 class="estudante-nome">shrek bigodudo</h3>
-                  <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                  <img class="estudante-imagem" src="./roddy.png" alt="foto do estudante">
+                  <h3 class="estudante-nome">Thiaguintopzão</h3>
+                  <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                   <img class="estudante-icone" src="./github.png" alt="github">
                   <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
                 </div>
                     <div class="estudante-div">
                       <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
                       <h3 class="estudante-nome">shrek bigodudo</h3>
-                      <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                      <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                       <img class="estudante-icone" src="./github.png" alt="github">
                       <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
                     </div>
@@ -54,21 +54,21 @@
                         <div class="estudante-div">
                           <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
                           <h3 class="estudante-nome">shrek bigodudo</h3>
-                          <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                          <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                           <img class="estudante-icone" src="./github.png" alt="github">
                           <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
                         </div>
                             <div class="estudante-div">
                               <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
                               <h3 class="estudante-nome">shrek bigodudo</h3>
-                              <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                              <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                               <img class="estudante-icone" src="./github.png" alt="github">
                               <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
                             </div>
                                 <div class="estudante-div">
                                   <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
                                   <h3 class="estudante-nome">shrek bigodudo</h3>
-                                  <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                                  <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                                   <img class="estudante-icone" src="./github.png" alt="github">
                                   <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
                                 </div>
@@ -77,25 +77,28 @@
                                     <div class="estudante-div">
                                       <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
                                       <h3 class="estudante-nome">shrek bigodudo</h3>
-                                      <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                                      <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                                       <img class="estudante-icone" src="./github.png" alt="github">
                                       <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
                                     </div>
                                         <div class="estudante-div">
                                           <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
                                           <h3 class="estudante-nome">shrek bigodudo</h3>
-                                          <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                                          <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                                           <img class="estudante-icone" src="./github.png" alt="github">
                                           <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
                                         </div>
                                             <div class="estudante-div">
                                               <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
                                               <h3 class="estudante-nome">shrek bigodudo</h3>
-                                              <img class="estudante-icone" src="./instagram.png" alt="instagram">
+                                              <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                                               <img class="estudante-icone" src="./github.png" alt="github">
                                               <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
                                             </div>
                                         </div>
+                                        <footer>
+                                          <img src="./alurastart logo.png" alt="logo do alurastart">
+                                        </footer>
         </section>
     </body>
 </html>
