--- a/index.html
+++ b/index.html
@@ -44,30 +44,30 @@
                   <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
                 </div>
                     <div class="estudante-div">
-                      <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
-                      <h3 class="estudante-nome">shrek bigodudo</h3>
+                      <img class="estudante-imagem" src="./davy.png" alt="foto do estudante">
+                      <h3 class="estudante-nome">Davyzera</h3>
                       <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                       <img class="estudante-icone" src="./github.png" alt="github">
                       <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
                     </div>
                     <span></span>
                         <div class="estudante-div">
-                          <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
-                          <h3 class="estudante-nome">shrek bigodudo</h3>
+                          <img class="estudante-imagem" src="./bryana.png" alt="foto do estudante">
+                          <h3 class="estudante-nome">Bryana</h3>
                           <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                           <img class="estudante-icone" src="./github.png" alt="github">
                           <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
                         </div>
                             <div class="estudante-div">
-                              <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
-                              <h3 class="estudante-nome">shrek bigodudo</h3>
+                              <img class="estudante-imagem" src="./jorge.png" alt="foto do estudante">
+                              <h3 class="estudante-nome">Jorgin</h3>
                               <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                               <img class="estudante-icone" src="./github.png" alt="github">
                               <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
                             </div>
                                 <div class="estudante-div">
-                                  <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
-                                  <h3 class="estudante-nome">shrek bigodudo</h3>
+                                  <img class="estudante-imagem" src="./caio.png" alt="foto do estudante">
+                                  <h3 class="estudante-nome">caio</h3>
                                   <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                                   <img class="estudante-icone" src="./github.png" alt="github">
                                   <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
@@ -75,22 +75,22 @@
                                 <span></span>
                                
                                     <div class="estudante-div">
-                                      <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
-                                      <h3 class="estudante-nome">shrek bigodudo</h3>
+                                      <img class="estudante-imagem" src="./richard.png" alt="foto do estudante">
+                                      <h3 class="estudante-nome">rycharde</h3>
                                       <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                                       <img class="estudante-icone" src="./github.png" alt="github">
                                       <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
                                     </div>
                                         <div class="estudante-div">
-                                          <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
-                                          <h3 class="estudante-nome">shrek bigodudo</h3>
+                                          <img class="estudante-imagem" src="./Ícaro.png" alt="foto do estudante">
+                                          <h3 class="estudante-nome">Ícaro</h3>
                                           <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                                           <img class="estudante-icone" src="./github.png" alt="github">
                                           <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
                                         </div>
                                             <div class="estudante-div">
-                                              <img class="estudante-imagem" src="./shrek.png" alt="foto do estudante">
-                                              <h3 class="estudante-nome">shrek bigodudo</h3>
+                                              <img class="estudante-imagem" src="./andrews.png" alt="foto do estudante">
+                                              <h3 class="estudante-nome">Amdrews</h3>
                                               <a href="https://www.instagram.com/"> <img class="estudante-icone" src="./instagram.png" alt="instagram"> </a>
                                               <img class="estudante-icone" src="./github.png" alt="github">
                                               <img class="estudante-icone" src="./linkedin.png" alt="linkedin">
